updated redisconfig tolist()